Starting list functionalies

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,5 @@
 @import url("./vuesax.scss");
 @import url("./text.scss");
 @import url("./anims.scss");
+@import url("./layout.scss");
+@import url("./custom.scss");
