--- a/src/assets/styles/text.scss
+++ b/src/assets/styles/text.scss
@@ -1,7 +1,26 @@
 h1 {
-  @apply text-5xl font-extrabold;
+  @apply text-4xl font-extrabold;
+  @screen md {
+    @apply text-5xl;
+  }
 }
 
 h2 {
-  @apply text-4xl font-bold;
+  @apply text-3xl font-bold;
+  @screen md {
+    @apply text-4xl;
+  }
+}
+
+h3 {
+  @apply text-3xl font-bold;
+}
+h4 {
+  @apply text-xl font-semibold;
+}
+h5 {
+  @apply text-lg font-semibold;
+}
+h6 {
+  @apply text-base font-semibold;
 }
