--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,12 +1,11 @@
 .top-header {
-  z-index: 998;
   @apply flex justify-between items-center flex-wrap mb-4 bg-white px-4 py-2
-  sticky top-0 border-b;
+  sticky top-0 border-b z-40;
   .buttons {
     @apply flex items-center m-2 mr-0 flex-wrap;
   }
   h3 {
-    @apply text-gray-600;
+    @apply text-gray-800;
   }
 }
 
