--- a/src/assets/styles/anims.scss
+++ b/src/assets/styles/anims.scss
@@ -36,11 +36,7 @@
 
 @keyframes zoom {
   0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.3);
+    transform: scale(2);
   }
 
   100% {
@@ -115,11 +111,11 @@
 }
 
 .fade-up-enter-active {
-  animation: fadeInUp 0.3s;
+  animation: fadeInUp 0.3s ease;
 }
 
 .fade-up-leave-active {
-  animation: fadeInUp 0.3s reverse;
+  animation: fadeInUp 0.3s ease reverse;
 }
 
 .fade-down-enter-active {
@@ -144,6 +140,13 @@
 
 .fade-right-leave-active {
   animation: fadeInRight 0.3s reverse;
+}
+.zoom-enter-active {
+  animation: zoom 0.3s;
+}
+
+.zoom-leave-active {
+  animation: zoom 0.3s reverse;
 }
 
 [anim*="fade-down"] {
