--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -1,17 +1,18 @@
 .top-header {
-  @apply flex justify-between items-center flex-wrap mb-4 bg-white px-4 py-2
-  sticky top-0 border-b z-40;
+  @apply flex justify-between items-center flex-wrap bg-white px-4 py-2
+   border-b z-40;
+  @screen md {
+    @apply sticky top-0;
+  }
   .buttons {
     @apply flex items-center m-2 mr-0 flex-wrap;
-  }
-  h3 {
-    @apply text-gray-800;
   }
 }
 
 .dropdown-actions {
   min-width: 120px;
-  @apply w-auto text-dark border rounded-md shadow-sm bg-white overflow-hidden;
+  max-width: 300px;
+  @apply w-max text-dark border rounded-md shadow-sm bg-white overflow-hidden;
   a,
   .btn {
     @apply w-full flex items-center py-2 px-3 border-b border-gray-50 text-gray-600;
@@ -52,4 +53,8 @@
 
 .center {
   @apply flex flex-col items-center;
+}
+
+.disable-content {
+  @apply opacity-50 pointer-events-none;
 }
